aws-deployment-us-west-2/configs/gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: nacos-microservices
  labels:
    app: gateway-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gateway-service
