aws-deployment-us-west-2/configs/nacos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-server
  namespace: nacos-microservices
  labels:
    app: nacos-server
spec:
  type: ClusterIP
  ports:
  - port: 8848
    targetPort: 8848
    protocol: TCP
    name: client
  - port: 9848
    targetPort: 9848
    protocol: TCP
    name: client-rpc
  - port: 9849
    targetPort: 9849
    protocol: TCP
    name: raft-rpc
  - port: 7848
    targetPort: 7848
    protocol: TCP
    name: old-raft-rpc
  selector:
    app: nacos-server
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-server-headless
  namespace: nacos-microservices
  labels:
    app: nacos-server
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8848
    targetPort: 8848
    protocol: TCP
    name: client
  selector:
    app: nacos-server
