aws-deployment-us-west-2/configs/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: nacos-microservices
  labels:
    app: notification-service
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: notification-service
