aws-deployment-us-west-2/configs/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: nacos-microservices
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: order-service
