aws-deployment-us-west-2/configs/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: nacos-microservices
  labels:
    app: user-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: user-service
